* [MISC] move star column to the front on anime page * [MISC] slightly reduce height of bubble stripe becaus eof overflow issues

--- a/common/layout/page/main.css
+++ b/common/layout/page/main.css
@@ -54,9 +54,10 @@
 
 #layout-main div.main_all div.datablocks div.stripe
 {
-	height:7.5em;
+	height:72px;
 	width:100%;
 	overflow:hidden;
+	position: inherit;
 }
 
 #layout-main div.main_all div.datablocks div.similaranime div.stripe div.data
